[project]
name = "ecephys"
version = "0.0.1"
authors = [
  { name="Graham Findlay", email="gfindlay@wisc.edu" }
]
description = "Python tools for extracellular electrophysiology"
readme = "README.md"
requires-python = ">=3.9,<4.0"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: OS Independent"
]

dependencies = [
    "bg-atlasapi",
    "chardet",
    "colorcet",
    "dask[complete]",
    "deepdiff",
    "docopt",
    "ephyviewer",
    "horology",
    "ibllib",
    "ipykernel",
    "ipympl",
    "ipython",
    "ipywidgets",
    "kcsd @ git+https://github.com/Neuroinflab/kCSD-python.git",
    "mat73",
    "matplotlib",
    "numpy",
    "pandas",
    "pyEDFlib",
    "pyfftw",
    "PyYAML",
    "ripple-detection",
    "scikit-learn",
    "scipy",
    "seaborn",
    "sortednp",
    "spikeinterface",
    "ssqueezepy",
    "Statsmodels",
    "tdt",
    "xarray[complete]",
]

[project.optional-dependencies]

dev = [
    "black",
    "altair",
]

[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.setuptools]
packages = ["ecephys"]
