[project]
name = "ecephys"
version = "0.0.6"
authors = [
  { name="Graham Findlay", email="gfindlay@wisc.edu" }
]
description = "Python tools for extracellular electrophysiology"
readme = "README.md"
requires-python = ">=3.9,<4.0"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: OS Independent"
]

dependencies = [
    "bg-atlasapi",
    "chardet",
    "colorcet",
    "dask[complete]",
    "deepdiff",
    "docopt",
    "elephant",
    "ephyviewer",
    "horology",
    "ibllib",
    "ipykernel",
    "ipympl",
    "ipython",
    "ipywidgets",
    "kcsd",
    "mat73",
    "matplotlib >= 3.7",
    "numpy",
    "pandas == 1.5.3", # This was the last pandas release before 2.0.0. 
    "pyEDFlib",
    "pyfftw",
    "PyYAML",
    "ripple-detection",
    "scikit-learn",
    "scipy",
    "seaborn",
    "sortednp",
    "spikeinterface",
    "ssqueezepy",
    "Statsmodels",
    "tdt",
    "xarray[complete]",
    "yasa",
]

[project.optional-dependencies]

dev = [
    "black",
    "altair",
]

[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.setuptools]
packages = ["ecephys"]
